# SpecForge

./: .env.example  .gitignore  README.md  activity.md  development_log.md  e -Force .git  generate_commits.sh  inspect_artifact.py  package.json  pnpm-lock.yaml  railway.json  vercel.json
apps/api/: .env.example  init_db.py  package.json  pyproject.toml  railway.json  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  config.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: router.py
apps/api/app/core/: exceptions.py  logging.py  middleware.py  monitoring.py  security.py
apps/api/app/crud/: __init__.py  artifact.py  project.py  user.py
apps/api/app/db/: session.py
apps/api/app/graph/: runner.py  runtime.py  state.py  workflow.py
apps/api/app/graph/nodes/: analyze.py  api_spec.py  deployment.py  erd.py  hld.py  lld.py  master_prompt.py  prd.py  security.py  stories.py  testing.py
apps/api/app/graph/prompts/: master_prompt.py  (+1 more)
apps/api/app/llm/: client.py
apps/api/app/models/: __init__.py  artifact.py  enums.py  generation_event.py  project.py  user.py
apps/api/app/schemas/: __init__.py  artifact.py  auth.py  common.py  master_prompt.py  project.py
apps/api/app/services/: __init__.py  artifact_service.py  auth_service.py  export_service.py  generation_service.py  master_prompt_service.py  project_service.py
apps/api/tests/: conftest.py  test_artifacts.py  test_auth.py  test_export_engine.py  test_generation_workflow.py  test_master_prompt_generator.py  test_projects.py
(+108 files in other folders)
